style.css
/* ... */
/* один блок коллекции */

.collection-block {
  width: 100%;
}

/* заголовок коллекции */

.collection-block h2 {
  margin-bottom: 15px;
}
.filters {
  width: 220px;
  margin-left: 0px;
  margin-top: 40px;
}
.sidebar {
  width: 240px;
  padding: 10px 20px;
  height: 100vh;
}

.filters {
  margin-top: 30px;
}
/* ===== MY LIST PAGE ===== */

.mylist-page {
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
  padding: 40px;
  color: white;
}

.mylist-title {
  font-size: 32px;
  margin-bottom: 30px;
}

/* секция статуса */

.list-section {
  margin-bottom: 50px;
}

.list-section h2 {
  margin-bottom: 20px;
  font-size: 22px;
  color: #c4b5fd;
}

/* контейнер карточек */

#readingList {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 20px;
}

/* карточка манги */

.manga-card {
  background: #1b0f2a;
  border-radius: 10px;
  overflow: hidden;
  transition: 0.3s;
  cursor: pointer;
}

.manga-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 0 15px rgb(255, 0, 204);
}

.manga-card img {
  width: 100%;
  height: 260px;
  object-fit: cover;
}

.card-info {
  padding: 10px;
}

.card-info h4 {
  margin-bottom: 5px;
}

.type {
  font-size: 12px;
  opacity: 0.8;
}
.card-info select {
  margin-top: 8px;

  width: 100%;

  padding: 6px;

  background: #141028;

  color: white;

  border: 1px solid #7c3aed;

  border-radius: 6px;
}
.progress-block {
  margin: 6px 0;

  display: flex;

  align-items: center;

  gap: 6px;
}

.progress-block input {
  width: 60px;

  padding: 4px;

  background: #141028;

  border: 1px solid #7c3aed;

  border-radius: 6px;

  color: white;
}

.card-info select {
  margin-top: 6px;

  width: 100%;

  padding: 6px;

  background: #141028;

  color: white;

  border: 1px solid #7c3aed;

  border-radius: 6px;
}
.progress-text {
  font-size: 12px;
  opacity: 0.8;
  margin-top: 4px;
}

.progress-bar {
  width: 100%;
  height: 6px;
  background: #1a1028;
  border-radius: 6px;
  margin-top: 6px;
  overflow: hidden;
}

.progress-fill {
  height: 100%;
  background: linear-gradient(90deg, #7c3aed, #a855f7);
  border-radius: 6px;
  transition: width 0.3s;
}
.add-manga-form {
  max-width: 500px;
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.add-manga-form input,
.add-manga-form textarea,
.add-manga-form select {
  padding: 10px;
  border-radius: 8px;
  border: 1px solid #444;

  background: #15002eae;
  color: white;
}

.file-upload {
  font-size: 14px;
}

.add-manga-form button {
  padding: 10px;
  border-radius: 8px;
  border: none;

  background: #7c3aed;
  color: white;

  cursor: pointer;
}

.add-manga-form button:hover {
  background: #6d28d9;
}
.page-indicator {
  text-align: center;
  margin-bottom: 15px;
  font-size: 18px;
  color: white;
}
#logoutBtn {
  position: relative;
  z-index: 9999;
  cursor: pointer;
}

